# CodeGraphRAG

./: .env  CodeGraphRag.md  Code_retrieval.md  GraphRAG 输出上下文.md  README.md  batch_run.py  check_openssl_func.sh  finai_result_name.md  main.py  pyproject.toml  semantic_file_result.json  semantic_total_result.json  test.py  test_llm.py  遗留问题.md
.tmp/: algorithm-graph.json  algorithm-out.json  analyze_antipattern_change_format_output.json  analyze_antipattern_output.json  antipattern_relevance_result.json  file_result.json  output-1.json  output-2.json  output-py.json  output.json  result.json  src-graph.json  src-out.json  src-out1.json  subgraph-file.json  total_result.json
codebase_rag/: config.py  graph_updater.py  language_config.py  main.py  parser_loader.py  prompts.py  schemas.py
codebase_rag/enre/: enre_graph_analyzer.py  loader.py  loader_test.py  relation_type.py  test.py
codebase_rag/parsers/: call_processor.py  definition_processor.py  factory.py  import_processor.py  java_utils.py  (+6 more)
fix_example/: awd_fix.yaml  ch_fix.yaml  kafka_77_ch_antipattern.json  mh_fix.yaml
test/: __init__.py  test1.py  test2.py  test3.py
tmp/: 20-graph.json  20-out.json  analyze_antipattern_output.json  antipattern_relevance_result.json  awd-classify_result.json  awd-final-result.json  before-graph.json  classify_result.json  direct_file_repair_suggestions  file_result.json  indirect_files_for_changes_results  mh-classify_result.json  mh-final-result.json  repair_file_llm.json  result.json  semantic_file_result.json  src-graph.json  subgraph-file.json  total_result.json
(+45 files in other folders)
