[project]
name = "codegraphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pymgclient>=1.4.0",
    "prompt-toolkit>=3.0.52",
    "tree-sitter-python>=0.23.6",
    "tree-sitter==0.25.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
    "typer>=0.17.3",
]
