[project]
name = "codegraphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "pymgclient>=1.4.0",
    "prompt-toolkit>=3.0.52",
    "tree-sitter-python>=0.23.6",
    "tree-sitter==0.25.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
    "typer>=0.17.3",
    "toml>=0.10.2",
    "pydantic-ai>=1.0.0",
    "diff-match-patch>=20241021",
    "tree-sitter-java>=0.23.5",
    "datetime>=5.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "chromadb>=1.1.1",
    "langchain-openai>=0.3.35",
    "langchain-chroma>=0.2.6",
    "chardet>=5.2.0",
]
